--- a/2014/Code/Source/TVGenius/TVGenius.MockTV/TVWin.xaml
+++ b/2014/Code/Source/TVGenius/TVGenius.MockTV/TVWin.xaml
@@ -2,7 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="TVWin" Height="350" Width="525">
-    <Grid>
-        <TextBlock Name="TxtScreen" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
-    </Grid>
+    <DockPanel>
+        <Grid>
+            <TextBlock Name="TxtScreen" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <MediaElement Name="Media" ></MediaElement>
+            <TextBlock Name="TxtTime" VerticalAlignment="Bottom" Margin="0,5,0,0" />
+        </Grid>
+    </DockPanel>
 </Window>
