--- a/2014/Code/Source/TVGenius/TVGenius.MockTV/TVWin.xaml
+++ b/2014/Code/Source/TVGenius/TVGenius.MockTV/TVWin.xaml
@@ -1,12 +1,26 @@
 ﻿<Window x:Class="TVGenius.MockTV.TVWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mockTV="clr-namespace:TVGenius.MockTV"
+        xmlns:common="clr-namespace:TVGenius.Common;assembly=TVGenius.Common"
         Title="TVWin" Height="350" Width="525">
+    
+    <Window.Resources>
+        <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" False="Collapsed" True="Visible" />
+        <common:BooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" True="Collapsed" False="Visible" />
+        <common:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+    </Window.Resources>
     <DockPanel>
         <Grid>
-            <TextBlock Name="TxtScreen" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Top" />
-            <MediaElement Name="Media" ></MediaElement>
-            <TextBlock Name="TxtTime" VerticalAlignment="Bottom" Margin="0,5,0,0" />
+            <Grid Visibility="{Binding RelativeSource={ RelativeSource AncestorType={x:Type mockTV:TVWin}}, Path=IsHibernate, Converter= {StaticResource InverseBooleanToVisibilityConverter } }">
+                <MediaElement Name="Media" IsMuted="{Binding RelativeSource={ RelativeSource AncestorType={x:Type mockTV:TVWin}}, Path=IsHibernate}"  Stretch="Fill" UnloadedBehavior="Manual" LoadedBehavior="Play" MediaEnded="MediaOnMediaEnded" />
+                <TextBlock Name="TxtTip" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="24" Foreground="DarkOrange"  Margin="0,5,10,0" Background="AliceBlue"/>
+                <TextBlock Name="TxtTime" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,15,5" Foreground="Gray" Background="White" />
+            </Grid>
+           
+            <Border Visibility="{Binding RelativeSource={RelativeSource AncestorType={x:Type mockTV:TVWin}}, Path=IsHibernate, Converter= {StaticResource BooleanToVisibilityConverter } }" Background="Gray">
+                <TextBlock Text="Hibernate" FontSize="26" Foreground="Fuchsia"/>
+            </Border>
         </Grid>
     </DockPanel>
 </Window>
